fix issue of adding choices to gapmatch interaction
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoItems/trunk@3772 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/js/QTI/css/qti.css
+++ b/views/js/QTI/css/qti.css
@@ -65,7 +65,6 @@ div.qti_item {margin:20px; width:80%; margin:10px auto 10px auto; }
 /* BD #c0c0c0 */.hottext_choice_on:hover {border-color:#c0c0c0; }
 
 /* used by text_entry and extended_text interactions */
-input[type='text'] {text-align:right; 	}
 input[type='text'],textarea {border: solid 1px #555; border-bottom-color: #CCC; border-right-color: #CCC; }
 textarea {width:400px; height:100px; margin:auto; 	}
 
